@@ -32,7 +32,7 @@ strsplit grep [g]sub [g]regexpr
 #include <config.h>
 #endif
 
-/* NB: USE_TRE_FOR_FIXED appears to work, but is minimally tested.
+/* It is possible to use TRE for fixed = TRUE.
    The main benefit would be code simplification: however, the
    special-purpose code is substantially faster.
  */
@@ -154,10 +154,6 @@ SEXP attribute_hidden do_strsplit(SEXP call, SEXP op, SEXP args, SEXP env)
     }
 
     cflags = REG_EXTENDED;
-#ifdef USE_TRE_FOR_FIXED
-    if (fixed_opt)
-        cflags = REG_LITERAL;
-#endif
 
     len = LENGTH(x);
     tlen = LENGTH(tok);
@@ -283,9 +279,7 @@ SEXP attribute_hidden do_strsplit(SEXP call, SEXP op, SEXP args, SEXP env)
                 UNPROTECT(1);
             }
         }
-        else
-#ifndef USE_TRE_FOR_FIXED
-            if (fixed_opt)
+        else if (fixed_opt)
         {
             const char *laststart, *ebuf;
             int slen;
@@ -388,9 +382,7 @@ SEXP attribute_hidden do_strsplit(SEXP call, SEXP op, SEXP args, SEXP env)
                     SET_STRING_ELT(t, ntok, markKnown(bufp, STRING_ELT(x, i)));
             }
         }
-        else
-#endif
-            if (perl_opt)
+        else if (perl_opt)
         {
             pcre *re_pcre;
             pcre_extra *re_pe;
@@ -675,7 +667,6 @@ SEXP attribute_hidden do_strsplit(SEXP call, SEXP op, SEXP args, SEXP env)
     return ans;
 }
 
-#ifndef USE_TRE_FOR_FIXED
 /* Used by grep[l] and [g]regexpr, with return value the match
    position in characters */
 /* This could be faster for plen > 1, but uses in R are for small strings */
@@ -799,7 +790,6 @@ static int fgrep_one_bytes(const char *pat, const char *target, Rboolean useByte
                 return i;
     return -1;
 }
-#endif
 
 SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
 {
@@ -889,12 +879,9 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
         useBytes = onlyASCII;
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         if (igcase_opt)
             cflags |= PCRE_CASELESS;
@@ -913,10 +900,6 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
         cflags |= REG_EXTENDED;
         if (igcase_opt)
             cflags |= REG_ICASE;
-#ifdef USE_TRE_FOR_FIXED
-        if (fixed_opt)
-            cflags = REG_LITERAL;
-#endif
     }
 
     if (!useBytes && !use_UTF8)
@@ -932,11 +915,7 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
                 }
     }
 
-    if (
-#ifndef USE_TRE_FOR_FIXED
-        !fixed_opt &&
-#endif
-        !perl_opt)
+    if (!fixed_opt && !perl_opt)
     {
         use_WC = use_UTF8;
         use_UTF8 = FALSE;
@@ -959,12 +938,9 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
             error(_("regular expression is invalid in this locale"));
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         int erroffset;
         const char *errorptr;
@@ -1023,12 +999,9 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
                 }
             }
 
-#ifndef USE_TRE_FOR_FIXED
             if (fixed_opt)
                 LOGICAL(ind)[i] = fgrep_one(spat, s, useBytes, use_UTF8, NULL) >= 0;
-            else
-#endif
-                if (perl_opt)
+            else if (perl_opt)
             {
                 if (pcre_exec(re_pcre, re_pe, s, strlen(s), 0, 0, &ov, 0) >= 0)
                     INTEGER(ind)[i] = 1;
@@ -1046,12 +1019,10 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
         if (invert ^ LOGICAL(ind)[i])
             nmatches++;
     }
-#ifndef USE_TRE_FOR_FIXED
+
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         if (re_pe)
             pcre_free(re_pe);
@@ -1518,10 +1489,7 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
     int global, igcase_opt, perl_opt, fixed_opt, useBytes, cflags = 0, eflags, last_end;
     char *u, *cbuf;
     const char *spat = NULL, *srep = NULL, *s = NULL;
-#ifndef USE_TRE_FOR_FIXED
-    int patlen = 0;
-#endif
-    int replen = 0;
+    int patlen = 0, replen = 0;
     Rboolean use_UTF8 = FALSE, use_WC = FALSE;
     const wchar_t *wrep = NULL;
 
@@ -1610,11 +1578,7 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
                 }
     }
 
-    if (
-#ifndef USE_TRE_FOR_FIXED
-        !fixed_opt &&
-#endif
-        !perl_opt)
+    if (!fixed_opt && !perl_opt)
     {
         use_WC = use_UTF8;
         use_UTF8 = FALSE;
@@ -1646,7 +1610,6 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
             error(_("'replacement' is invalid in this locale"));
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
     {
         patlen = strlen(spat);
@@ -1655,15 +1618,10 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
         replen = strlen(srep);
     }
     else
-#endif
     {
         cflags |= REG_EXTENDED;
         if (igcase_opt)
             cflags |= REG_ICASE;
-#ifdef USE_TRE_FOR_FIXED
-        if (fixed_opt)
-            cflags = REG_LITERAL;
-#endif
         if (!use_WC)
         {
             rc = tre_regcompb(&reg, spat, cflags);
@@ -1708,7 +1666,6 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
                 error(("input string %d is invalid in this locale"), i + 1);
         }
 
-#ifndef USE_TRE_FOR_FIXED
         if (fixed_opt)
         {
             int st, nr;
@@ -1754,9 +1711,7 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
                 Free(cbuf);
             }
         }
-        else
-#endif
-            if (!use_WC)
+        else if (!use_WC)
         {
             int maxrep;
             /* extended regexp in bytes */
@@ -1904,9 +1859,9 @@ SEXP attribute_hidden do_gsub(SEXP call, SEXP op, SEXP args, SEXP env)
             Free(cbuf);
         }
     }
-#ifndef USE_TRE_FOR_FIXED
-    if (!fixed_opt)
-#endif
+    if (fixed_opt)
+        ;
+    else
         tre_regfree(&reg);
     DUPLICATE_ATTRIB(ans, text);
     /* This copied the class, if any */
@@ -1987,12 +1942,9 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
         useBytes = onlyASCII;
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         if (igcase_opt)
             cflags |= PCRE_CASELESS;
@@ -2009,10 +1961,6 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
         cflags |= REG_EXTENDED;
         if (igcase_opt)
             cflags |= REG_ICASE;
-#ifdef USE_TRE_FOR_FIXED
-        if (fixed_opt)
-            cflags = REG_LITERAL;
-#endif
     }
 
     if (!useBytes && !use_UTF8)
@@ -2028,11 +1976,7 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
                 }
     }
 
-    if (
-#ifndef USE_TRE_FOR_FIXED
-        !fixed_opt &&
-#endif
-        !perl_opt)
+    if (!fixed_opt && !perl_opt)
     {
         use_WC = use_UTF8;
         use_UTF8 = FALSE;
@@ -2055,12 +1999,9 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
             error(_("regular expression is invalid in this locale"));
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         tables = pcre_maketables();
         re_pcre = pcre_compile(spat, cflags, &errorptr, &erroffset, tables);
@@ -2123,7 +2064,6 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
                     continue;
                 }
             }
-#ifndef USE_TRE_FOR_FIXED
             if (fixed_opt)
             {
                 st = fgrep_one(spat, s, useBytes, use_UTF8, NULL);
@@ -2139,9 +2079,7 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
                 else
                     INTEGER(matchlen)[i] = INTEGER(ans)[i] >= 0 ? strlen(spat) : -1;
             }
-            else
-#endif
-                if (perl_opt)
+            else if (perl_opt)
             {
                 rc = pcre_exec(re_pcre, re_pe, s, strlen(s), 0, 0, ovector, 3);
                 if (rc >= 0)
@@ -2182,12 +2120,9 @@ SEXP attribute_hidden do_regexpr(SEXP call, SEXP op, SEXP args, SEXP env)
             }
         }
     }
-#ifndef USE_TRE_FOR_FIXED
     if (fixed_opt)
         ;
-    else
-#endif
-        if (perl_opt)
+    else if (perl_opt)
     {
         if (re_pe)
             pcre_free(re_pe);
@@ -2294,7 +2229,6 @@ static SEXP gregexpr_Regexc(const regex_t *reg, SEXP sstr, int useBytes, int use
     return ans;
 }
 
-#ifndef USE_TRE_FOR_FIXED
 static SEXP gregexpr_fixed(const char *pattern, const char *string, Rboolean useBytes, Rboolean use_UTF8)
 {
     int patlen, matchIndex, st, foundAll, foundAny, curpos, j, ansSize, nb = 0;
@@ -2379,7 +2313,6 @@ static SEXP gregexpr_fixed(const char *pattern, const char *string, Rboolean use
     UNPROTECT(4);
     return ans;
 }
-#endif
 
 static SEXP gregexpr_NAInputAns(void)
 {
@@ -2640,10 +2573,10 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
         igcase_opt = 0;
     if (perl_opt == NA_INTEGER)
         perl_opt = 0;
-    if (useBytes == NA_INTEGER)
-        useBytes = 0;
     if (fixed_opt == NA_INTEGER)
         fixed_opt = 0;
+    if (useBytes == NA_INTEGER)
+        useBytes = 0;
     if (fixed_opt && igcase_opt)
         warning(_("argument '%s' will be ignored"), "ignore.case = TRUE");
     if (fixed_opt && perl_opt)
@@ -2652,7 +2585,7 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
         perl_opt = 0;
     }
 
-    if (!isString(text) || length(text) < 1)
+    if (!isString(text))
         error(_("invalid '%s' argument"), "text");
     /* Note that excluding NAs differs from grep/sub */
     if (!isString(pat) || length(pat) < 1 || STRING_ELT(pat, 0) == NA_STRING)
@@ -2689,22 +2622,14 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
                 }
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (!fixed_opt)
-#endif
     {
         cflags |= REG_EXTENDED;
         if (igcase_opt)
             cflags |= REG_ICASE;
-#ifdef USE_TRE_FOR_FIXED
-        if (fixed_opt)
-            cflags = REG_LITERAL;
-#endif
     }
 
-#ifndef USE_TRE_FOR_FIXED
     if (!fixed_opt)
-#endif
     {
         use_WC = use_UTF8;
         use_UTF8 = FALSE;
@@ -2727,9 +2652,9 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
             error(_("regular expression is invalid in this locale"));
     }
 
-#ifndef USE_TRE_FOR_FIXED
-    if (!fixed_opt)
-#endif
+    if (fixed_opt)
+        ;
+    else
     {
         if (!use_WC)
             rc = tre_regcompb(&reg, spat, cflags);
@@ -2766,7 +2691,6 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
             }
             else
             {
-#ifndef USE_TRE_FOR_FIXED
                 if (fixed_opt)
                 {
                     if (useBytes)
@@ -2786,16 +2710,16 @@ SEXP attribute_hidden do_gregexpr(SEXP call, SEXP op, SEXP args, SEXP env)
                         elt = gregexpr_fixed(spat, s, useBytes, use_UTF8);
                 }
                 else
-#endif
                     elt = gregexpr_Regexc(&reg, STRING_ELT(text, i), useBytes, use_WC);
             }
         }
         SET_VECTOR_ELT(ans, i, elt);
     }
-#ifndef USE_TRE_FOR_FIXED
-    if (!fixed_opt)
-#endif
+    if (fixed_opt)
+        ;
+    else
         tre_regfree(&reg);
+
     UNPROTECT(1);
     return ans;
 }
